--- a/frontend/src/Assets/Styling/blogs.module.css
+++ b/frontend/src/Assets/Styling/blogs.module.css
@@ -28,6 +28,18 @@
     border-style: dashed;
 }
 
+.blogs a:hover> img{
+    transform: scale(1);
+    transition: transform .5s cubic-bezier(0.71, 1.16, 0.54,-0.21);
+}
+
+.blogs a img {
+    transform: scale(.9);
+    width: 100%;
+    height: 300px;
+    object-fit: cover;
+}
+
 .blogs a h2{
     text-align: center;
 }
