--- a/frontend/src/Assets/Styling/form.module.css
+++ b/frontend/src/Assets/Styling/form.module.css
@@ -2,6 +2,12 @@ form{
     margin-top: 60px;
 }
 
+.imageContainer img{
+    width: 100%;
+    height: 400px;
+    object-fit: contain;
+}
+
 .inputContainer{
     display: flex;
     justify-content: space-around;
@@ -29,6 +35,16 @@ form{
 .inputContainer input:focus::placeholder{
     font-size: small;
     transform: translateY(-13px);
+}
+
+.uploadContainer{
+    display: flex;
+    justify-content: center;
+    margin-top: 40px;
+}
+
+.uploadContainer input{
+    cursor: pointer;
 }
 
 .textAreaContainer{
